begin base form style

--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
     <h1>Not a real sign-up</h1>
 
     <form action="post">
-        <label for="fname">First Name</label>
-        <input type="text" name="fname">
-        <label for="lname">Last Name</label>
-        <input type="text" name="lname">
-        <label for="email">Email</label>
-        <input type="email" name="email">
-        <label for="pass">Password</label>
-        <input type="password" name="pass">
-        <label for="confirm">Confirm Password</label>
-        <input type="text" name="confirm">
+        
+        <div class="names">
+            <label for="fname">First Name</label>
+            <input type="text" name="fname">
+            <label for="lname">Last Name</label>
+            <input type="text" name="lname">
+        </div>
+        <div class="info">
+            <label for="email">Email</label>
+            <input type="email" name="email">
+            <label for="pass">Password</label>
+            <input type="password" name="pass">
+            <label for="confirm">Confirm Password</label>
+            <input type="text" name="confirm">
+        </div>
     </form>
 
 </body>
