--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <div id="button">
-                <button>Create Account</button>
+                <button type="button">Create Account</button>
                 <p>Already have an account? 
                     <a href="https://www.theodinproject.com/">Log In</a>
                 </p>
