add color change on hover over buttons, input

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <label for="pass">Password</label>
                     <input type="password" name="pass">
                     <label for="confirm">Confirm Password</label>
-                    <input type="text" name="confirm">
+                    <input type="password" name="confirm">
                 </div>
             </div>
             <div id="button">
