update desktop styles and font

--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
                 <h3>Let's do this!</h3>
                 <div class="names">
                     <label for="fname">First Name</label>
-                    <input type="text" name="fname">
+                    <input type="text" name="fname" id="fname">
                     <label for="lname">Last Name</label>
-                    <input type="text" name="lname">
+                    <input type="text" name="lname" id="lname">
                 </div>
                 <div class="info">
                     <label for="email">Email</label>
-                    <input type="email" name="email">
+                    <input type="email" name="email" id="email">
                     <label for="pass">Password</label>
-                    <input type="password" name="pass">
+                    <input type="password" name="pass" id="pass">
                     <label for="confirm">Confirm Password</label>
-                    <input type="password" name="confirm">
+                    <input type="password" name="confirm" id="confirm">
                 </div>
             </div>
             <div id="button">
