--- a/index.html
+++ b/index.html
@@ -49,19 +49,20 @@
         
             <div id="shaded">
                 <h3>Let's do this!</h3>
+                <span class="notif">Fields marked with * are required.</span>
                 <div class="names">
-                    <label for="fname">First Name</label>
-                    <input type="text" name="fname" id="fname">
+                    <label for="fname">*First Name</label>
+                    <input type="text" name="fname" id="fname" required>
                     <label for="lname">Last Name</label>
                     <input type="text" name="lname" id="lname">
                 </div>
                 <div class="info">
-                    <label for="email">Email</label>
-                    <input type="email" name="email" id="email">
-                    <label for="pass">Password</label>
-                    <input type="password" name="pass" id="pass">
-                    <label for="confirm">Confirm Password</label>
-                    <input type="password" name="confirm" id="confirm">
+                    <label for="email">*Email</label>
+                    <input type="email" name="email" id="email" required>
+                    <label for="pass">*Password</label>
+                    <input type="password" name="pass" id="pass" required minlength="6">
+                    <label for="confirm">*Confirm Password</label>
+                    <input type="password" name="confirm" id="confirm" required minlength="6">
                 </div>
             </div>
             <div id="button">
